# stuart-bot-discord

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: docker_build.yml
src/: container.py  main.py
src/modules/: __init__.py
src/modules/auth/dtos/authenticate/: __init__.py  authenticate_request_dto.py  authenticate_response_dto.py
src/modules/auth/services/application/: authenticate_service.py
src/modules/auth/services/domain/: generate_identifier_token_service.py
src/modules/auth/services/infra/: auth_service.py
src/modules/coach/commands/: coach_command.py
src/modules/coach/entities/: __init__.py  coach_entity.py
src/modules/coach/services/application/: get_coach_service.py
src/modules/coach/services/domain/: fetch_coach_service.py
src/modules/coach/services/infra/: coach_service.py
src/modules/meme/commands/: iam_command.py  novomeme_command.py  status_command.py
src/modules/meme/dtos/fetch_current_memes_count/: __init__.py  fetch_memes_status_response_dto.py
src/modules/meme/entities/: __init__.py  earned_meme_entity.py  meme_entity.py
src/modules/meme/services/application/: create_meme_service.py  get_meme_service.py  get_memes_count.py  (+1 more)
src/modules/shared/adapters/: __init__.py  bot_command.py
src/modules/shared/dataclasses/: __init__.py  command_option.py
src/modules/shared/services/: __init__.py  command_discovery_service.py  command_registration_service.py
src/modules/shared/settings/: env_example.txt  settings.py
src/modules/shared/utils/: discord_utils.py
(+13 files in other folders)
